Actualización en el index.html
Agregado un comentario de prueba.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Películas</title>
   </head>
   <body class="bg-blueGray-900">
+
+    <!-- COMENTARIO DE PRUEBA PARA GITHUB-->
     
 <!-- ENCABEZADO-->
 <nav
