Funcionalidad movie-info.html
Muestra la información de una película en especifico en movie-info.html gracias a la funcionalidad de movie-info.js

--- a/movie-info.html
+++ b/movie-info.html
@@ -172,13 +172,13 @@ id="nav-content"
 </nav>
 <!-- FIN DE ENCABEZADO-->
 
-    <div class="
+    <div id="movie-info" class="
     min-h-screen 
     md:w-full
     ">
     
     <!-- Start of component -->
-    <div
+    <!--<div
     class="
       w-full
       mt-20
@@ -271,7 +271,7 @@ id="nav-content"
                 </div>
     
     </div>
-  </div>
+  </div>-->
 
   <!-- End of component -->
     </div>
@@ -332,7 +332,7 @@ id="nav-content"
      </div>
  </div>
 </footer>   
-
+<script src="/js/movie-info.js"></script>
   </body>
 
 </html>
