--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
 
             <div class="dropdown inline-block relative">
-              <a href="#"
+              <a href="index.html"
                 class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
                 Películas
               </a>
@@ -232,7 +232,7 @@ place-content-center
       <div class="flex mt-8">
         <div class="mt-0 w-full px-8 flex flex-row justify-evenly">
           <div class="flex flex-col">
-            <a href="#" class="font-bold text-black uppercase mb-2">Acerca de</a>
+            <a href="nosotros.html" class="font-bold text-black uppercase mb-2">Acerca de</a>
           </div>
           <div class="flex flex-col">
             <a href="#" class="font-bold text-black uppercase mt-0 mb-2">Ayuda</a>
@@ -304,8 +304,8 @@ place-content-center
       <div class="mt-5 border-t-2 border-gray-900 flex flex-col items-center">
         <div class="sm:w-2/3 text-center py-6">
           <p class="text-sm text-blue-700 font-bold mb-2">
-            © 2021 by Anthony Javier Ortega
-            <br>Proyecto Personal De Multimedios
+            © 2021 by Grupo 03
+            <br>Proyecto Grupal De Multimedios
           </p>
         </div>
       </div>
