--- a/movie-info.html
+++ b/movie-info.html
@@ -52,7 +52,7 @@ class="
         </li>  
         
             <div class="dropdown inline-block relative">
-              <a href="#" class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
+              <a href="index.html" class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
                 Películas
               </a>
             </div>
@@ -283,7 +283,7 @@ id="nav-content"
      <div class="flex mt-8">
          <div class="mt-0 w-full px-8 flex flex-row justify-evenly">
              <div class="flex flex-col">
-                 <a href="#" class="font-bold text-black uppercase mb-2">Acerca de</a>
+                 <a href="nosotros.html" class="font-bold text-black uppercase mb-2">Acerca de</a>
              </div>
              <div class="flex flex-col">
                  <a href="#" class="font-bold text-black uppercase mt-0 mb-2">Ayuda</a>
@@ -324,10 +324,10 @@ id="nav-content"
  <div class="container mx-auto px-6">
      <div class="mt-5 border-t-2 border-gray-900 flex flex-col items-center">
          <div class="sm:w-2/3 text-center py-6">
-             <p class="text-sm text-blue-700 font-bold mb-2">
-                 © 2021 by Anthony Javier Ortega
-                 <br>Proyecto Personal De Multimedios
-             </p>
+          <p class="text-sm text-blue-700 font-bold mb-2">
+            © 2021 by Grupo 03
+            <br>Proyecto Grupal De Multimedios
+          </p>
          </div>
      </div>
  </div>
