--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ place-content-center
     lg:flex-wrap
     lg:justify-center
     lg:mt-28 
-    last: mb-14">
-      <div class="hidden lg:block ml-20 absolute text-2xl text-white font-semibold border-b-2 w-10/12">
+    last: mb-10">
+      <div class="hidden lg:block ml-20 absolute text-3xl text-white font-bold border-b-2 w-10/12">
         <span class="">Películas Populares</span>
       </div>
     </div>
@@ -183,7 +183,7 @@ place-content-center
   lg:justify-center
   lg:mt-28 
   last: mb-14">
-      <div class="hidden lg:block ml-20 absolute text-2xl text-white font-semibold border-b-2 w-10/12">
+      <div class="hidden lg:block ml-20 absolute text-3xl text-white font-bold border-b-2 w-10/12">
         <span class="">Las más valoradas</span>
       </div>
     </div>
@@ -197,7 +197,7 @@ place-content-center
   lg:justify-center
   lg:mt-28 
   last: mb-14">
-      <div class="hidden lg:block ml-20 absolute text-2xl text-white font-semibold border-b-2 w-10/12">
+      <div class="hidden lg:block ml-20 absolute text-3xl text-white font-bold border-b-2 w-10/12">
         <span class="">Próximamente en cines</span>
       </div>
     </div>
