Corrección en los submenus de genero y en los encabezados de las demás vistas

--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
                 class="bg-gray-800 border rounded-sm transform scale-0 group-hover:scale-100 absolute 
               transition duration-150 ease-in-out origin-top min-w-32"
               >
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500">Programming</li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500">DevOps</li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500">Testing</li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Acción</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Aventura</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Comedia</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Animada</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Drama</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Historia</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Romacnce</a></li>
+                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Musica</a></li>
               </ul>
             </div>
             
