Finalización de los generos
Se actualizó genero.html y genero.js y ya se puede filtrar las películas por genero desde cualquier vista

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                 class="bg-gray-800 border rounded-sm transform scale-0 group-hover:scale-100 absolute 
               transition duration-150 ease-in-out origin-top min-w-32"
               >
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Acción</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Aventura</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Comedia</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Animada</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Drama</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Historia</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Romacnce</a></li>
-                <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "genero.html">Musica</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=28" id="28">Acción</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=12" id="12">Aventura</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=35" id="35">Comedia</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=16" id="16">Animada</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=18" id="18">Drama</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=36" id="36">Historia</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=10749" id="10749">Romance</a></li>
+              <li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500"><a href = "/genero.html?id=10402" id="10402">Musica</a></li>
               </ul>
             </div>
             
