--- a/buscar.html
+++ b/buscar.html
@@ -125,10 +125,10 @@
 
           <!--BTN BUSQUEDA -->
           <div class="relative border-2 rounded-full border-gray-300  text-gray-600">
-            <a href="/buscar.html?" id="buscar">
-            <input type="search" placeholder="Buscar..." id="buscar"
-              class="bg-white h-10 px-5 pr-8 rounded-full text-sm focus:outline-none"> 
-            <button type="submit" class="absolute right-0 top-0 mt-3 mr-4" id="buscar">
+            <input type="search" placeholder="Buscar..." id="buscando"
+              class="bg-white h-10 px-5 pr-8 rounded-full text-sm focus:outline-none">
+              <a href="/buscar.html?">
+            <button type="submit" class="absolute right-0 top-0 mt-3 mr-4">
               <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
                 viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
