Vista tablet modificada
Modificada la vista tablet en movie-info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div class="inline-block relative">
               <a href="index.html"
-                class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
+                class="bg-transparent text-gray-700 font-semibold lg:text-xl px-4 rounded inline-flex items-center">
                 Películas
               </a>
             </div>
@@ -123,7 +123,6 @@
 
       <div class="hidden md:order-3 md:flex md:flex-wrap md:items-center md:justify-end md:mr-4" id="nav-content">
         <div class="auth flex items-center w-full md:w-full">
-          <!-- <button class="bg-transparent text-gray-800 p-2 rounded mr-4 hover:bg-gray-100 hover:text-gray-700">Ingresar</button> -->
 
          <!--BTN BUSQUEDA -->
          <div class="relative border-2 rounded-full border-gray-300  text-gray-600">
@@ -155,9 +154,9 @@
       mr-0
       md:mr-4
     " id="nav-content">
-        <div class="auth flex items-center ml-28 text-xl w-full md:w-full md:hidden">
+        <div class="auth flex items-center ml-20 text-xl w-full md:w-full md:hidden">
           <div class="group inline-block">
-            <button class="outline-none focus:outline-none  px-3 py-1  rounded-sm flex items-center min-w-32">
+            <button class="outline-none focus:outline-none px-3 py-1  rounded-sm flex items-center min-w-32">
               <span class="pr-1 font-semibold flex-1">Películas</span>
               
             </button>
