--- a/buscar.html
+++ b/buscar.html
@@ -91,7 +91,6 @@
               <a href = "/genero.html?id=10402" id="10402"><li class="rounded-sm text-white px-3 py-1 hover:bg-gray-500">Musica</li></a>
               </ul>
             </div>
-            
             <style>
               /* since nested groupes are not supported we have to use 
                  regular css for the nested dropdowns 
@@ -197,10 +196,10 @@ ease-in-out
     </a>
 
     <nav>
-      <a href="" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
+      <a href="index.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
         <span></span>
       </a>
-      <a href="" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Series
+      <a href="series.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Series
         <span>
 
         </span>
