--- a/genero.html
+++ b/genero.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="inline-block relative">
-              <a href="#"
+              <a href="series.html"
                 class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
                 <span>Series</span>
               </a>
@@ -217,10 +217,10 @@ ease-in-out
     </a>
 
     <nav>
-      <a href="" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
+      <a href="index.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
         <span></span>
       </a>
-      <a href="" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Series
+      <a href="series.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Series
         <span>
 
         </span>
@@ -302,6 +302,7 @@ ease-in-out
     lg:flex-wrap
     lg:justify-center
     mt-16
+    md:mt-20
     lg:mt-28 
     last: mb-16">
       <div class="hidden lg:block ml-20 absolute text-3xl text-white font-bold border-b-2 w-10/12">
