--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="inline-block relative">
-              <a href="#"
+              <a href="series.html"
                 class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
                 <span>Series</span>
               </a>
@@ -296,6 +296,7 @@ ease-in-out
   <main>
     <div id="populares" class="
     mt-20
+    md:mt-28
     min-h-screen 
     md:w-full
     lg:flex
