--- a/movie-info.html
+++ b/movie-info.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="inline-block relative">
-              <a href="#"
+              <a href="series.html"
                 class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
                 <span>Series</span>
               </a>
