--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ place-content-center
 " id="nav-content">
         <!--BTN BUSQUEDA -->
         <div class="relative ml-2 border-2 rounded-full border-gray-300  text-gray-600">
-          <input type="search" placeholder="Buscar..." id="buscando"
+          <input type="search" placeholder="Buscar..." id="buscandoMini"
             class="bg-white h-10 w-40 px-4 rounded-full text-sm focus:outline-none">
-          <button type="submit" class="absolute right-0 top-0 mt-3 mr-8" id="buscar" onclick="enviarBuscador()">
+          <button type="submit" class="absolute right-0 top-0 mt-3 mr-8" id="buscar" onclick="enviarBuscadorMini()">
             <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
               viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
