--- a/buscar.html
+++ b/buscar.html
@@ -51,13 +51,6 @@
               </a>
             </div>
 
-            <div class="inline-block relative">
-              <a href="#"
-                class="bg-transparent text-gray-700 font-semibold lg:text-xl py-2 px-4 rounded inline-flex items-center">
-                <span>Series</span>
-              </a>
-            </div>
-
                                     <!-- COMIENZA EL DROPDOWN DE LOS GÉNEROS-->
             <div class="group inline-block relative">
               <button
@@ -201,11 +194,6 @@ ease-in-out
       <a href="index.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
         <span></span>
       </a>
-      <a href="series.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Series
-        <span>
-
-        </span>
-      </a>
       <a class="block px-4">
 
 <!-- COMIENZA EL DROPDOWN DE LOS GÉNEROS-->
@@ -308,8 +296,7 @@ ease-in-out
   bg-blueGray-300
   border-blue-400">
     <a class="ml-2 w-10 h-10" href="index.html"><img src="https://img.icons8.com/office/40/000000/clapperboard.png" /></a>
-    <a class="h-10 w-10 mb-1 " href="series.html"><img src="https://img.icons8.com/ultraviolet/80/000000/homer-simpson.png"/></a>
-    <a class="w-8 h-7 mb-1 pt-1" href="#"><img src="https://img.icons8.com/ultraviolet/40/000000/time-span.png" /></a>
+    <a class="w-10 h-10" href="https://www.themoviedb.org/documentation/api"><img src="https://img.icons8.com/ultraviolet/40/000000/help.png"/></a>
     <a class="w-10 h-10 pb-1 mr-3 " href="nosotros.html"><img src="https://img.icons8.com/ultraviolet/40/000000/about-us-male.png"/></a>
 
   </nav>
@@ -324,10 +311,10 @@ ease-in-out
           <a href="nosotros.html" class="font-bold text-black uppercase mb-2">Acerca de</a>
         </div>
         <div class="flex flex-col">
-          <a href="#" class="font-bold text-black uppercase mt-0 mb-2">Ayuda</a>
+          <a href="https://www.themoviedb.org/documentation/api" class="font-bold text-black uppercase mt-0 mb-2">Ayuda</a>
         </div>
         <div class="flex flex-col">
-          <a href="#" class="font-bold text-black uppercase mt-0 mb-2">Contacto</a>
+          <a href="nosotros.html" class="font-bold text-black uppercase mt-0 mb-2">Contacto</a>
         </div>
 
       </div>
