Errores menores corregidos

--- a/movie-info.html
+++ b/movie-info.html
@@ -192,7 +192,7 @@ ease-in-out
     </a>
 
     <nav>
-      <a href="" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
+      <a href="index.html" class="block py-2.5 px-4 transition duration-200 hover:bg-blueGray-700">Películas
         <span></span>
       </a>
       <a class="block px-4">
