--- a/nosotros.html
+++ b/nosotros.html
@@ -136,26 +136,6 @@
         </div>
       </div>
       <!--FIN BOTONES-->
-      <div class="
-    md:hidden
-    place-content-center
-      order-2
-      md:order-3
-      flex flex-wrap
-      items-center
-      justify-center
-      mr-0
-      md:mr-4
-    " id="nav-content">
-        <div class="auth flex items-center ml-28 text-xl w-full md:w-full md:hidden">
-          <div class="group inline-block">
-            <button class="outline-none focus:outline-none  px-3 py-1  rounded-sm flex items-center min-w-32">
-              <span class="pr-1 font-semibold flex-1">Populares</span>
-              
-            </button>
-          </div>
-        </div>
-      </div>
 
       <div class="
 place-content-center
@@ -413,6 +393,11 @@ ease-in-out
             </div>
         </div>
     </footer>
+
+    <script src="/js/buscadorMini.js"></script>
+    <script src="/js/buscar.js"></script>
+    <script src="/js/genero.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
