--- a/movie-info.html
+++ b/movie-info.html
@@ -263,81 +263,10 @@ ease-in-out
   <!-- FIN DE ENCABEZADO-->
 
   <div id="movie-info" class="
-    h-96
+    h-screen
     md:w-full
     ">
 
-  </div>
-  <!-- Carousel Body -->
-  <div class="hidden w-8/12 relative inset-0 mt-20 py-8 ml-52 left-64 bottom-0 lg:grid">
-    <span class="text-2xl text-center mb-3 text-white font-semibold border-b-2 w-10/12">Similares</span>
-
-    <ul id="lightSlider">
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-      <a href="#">
-        <img alt="pulp_fiction" class="w-45 rounded-md border-2 border-gray-300 h-60 sm:h-48 cursor-pointer"
-          src="https://pics.filmaffinity.com/Pulp_Fiction-210382116-large.jpg" />
-      </a>
-    </ul>
   </div>
 
    <!-- FOOTER -->
